--- a/src/css/general.css
+++ b/src/css/general.css
@@ -19,7 +19,7 @@ body {
   font-family: "Source Sans 3", sans-serif;
 }
 .bg-primary {
-    background-color: var(--bg-primary) !important;
+  background-color: var(--bg-primary) !important;
 }
 .btn-primary {
   background-color: var(--bg-primary);
@@ -70,4 +70,7 @@ fieldset:disabled .btn {
 }
 .chat-ia-box {
   width: 27rem;
+}
+.offcanvas-body .card {
+  box-shadow: none !important;
 }
