--- a/src/css/home.css
+++ b/src/css/home.css
@@ -75,3 +75,14 @@ section {
 .text-justify {
     text-align: justify;
 }
+
+
+
+@media (max-width: 680px) {
+  .section-end {
+    background: #000 !important;
+  }
+  .vh-50 {
+    height: 100vh !important;
+  }
+}
