--- a/src/css/team.css
+++ b/src/css/team.css
@@ -56,6 +56,10 @@
   transform: scale(1.15);
   color: #fff;
   background-color: var(--bg-primary) !important;
+  border-color: #fff;
+}
+.tree span {
+  border: 3px solid #fff;
 }
 .tree code,
 .tree span {
