--- a/src/css/general.css
+++ b/src/css/general.css
@@ -111,3 +111,6 @@ fieldset:disabled .btn {
   0% { transform: translateX(0) }
   100% { transform: translateX(-100%) }
 }
+.alert-primary {
+  background-color: var(--bg-primary) !important;
+}
