--- a/src/css/general.css
+++ b/src/css/general.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;500;600;800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&display=swap');
 
 :root {
   --bg-primary: #0281f4;
@@ -20,6 +21,9 @@ body {
 }
 .sans {
   font-family: "Source Sans 3", sans-serif;
+}
+.openSans {
+  font-family: 'Open Sans', sans-serif;
 }
 .bg-primary {
   background-color: var(--bg-primary) !important;
@@ -113,4 +117,7 @@ fieldset:disabled .btn {
 }
 .alert-primary {
   background-color: var(--bg-primary) !important;
+}
+.rounded-badge {
+  border-radius: 1rem;
 }
