--- a/src/css/general.css
+++ b/src/css/general.css
@@ -147,7 +147,7 @@ fieldset:disabled .btn {
 .mb-6 {
   margin-bottom: 122px !important;
 }
-.avatar-md {
-  width: 6rem;
-  height: 6rem;
+.avatar-special {
+  width: 6rem !important;
+  height: 6rem !important;
 }
