--- a/src/css/store.css
+++ b/src/css/store.css
@@ -1,7 +1,8 @@
 .card-img-top {
-    height: 200px;
+    height: 300px;
     object-fit: cover;
     object-position: top;
+    mask-image: linear-gradient(to bottom, black 40%, transparent 90%);
 }
 .opacity-50{
     opacity: 0.5;
